# edgy-detection-of-mirror

./: .gitignore  README.md
src/line-LSD/: CMakeLists.txt  package.xml
src/line-LSD/src/: line_detection_LSD.cpp  line_find.cpp  line_find.h
